--- a/MeetWTech/seminar3/hw/hw.html
+++ b/MeetWTech/seminar3/hw/hw.html
@@ -11,7 +11,7 @@
 
         //определение функции
         function show_name(my_name) {
-            alert(`Здравствуйте, ${my_name}!`)
+            alert(`Здравствуйте, ${my_name}!`);
         }
     </script>
 
