--- a/Base_HTML_CSS/lesson9/HW/index.html
+++ b/Base_HTML_CSS/lesson9/HW/index.html
@@ -3,10 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson 9</title>
+    <title>Домашнее задание урока №9</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+    <div class="top">
+        <div class="top_item">
+            <img src="img/top_img1.svg" alt="" class="top_item_img">
+            <h3 class="top_heading">Grow Your Business</h3>
+            <p class="top_item_txt">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <p class="top_details">Read More...</p>
+        </div>
+        <div class="top_item">
+            <img src="img/top_img2.svg" alt="" class="top_item_img">
+            <h3 class="top_heading">Get Quality Ieads</h3>
+            <p class="top_item_txt">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <p class="top_details">Read More...</p>
+        </div>
+        <div class="top_item">
+            <img src="img/top_img3.svg" alt="" class="top_item_img">
+            <h3 class="top_heading">Drive More Sales</h3>
+            <p class="top_item_txt">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <p class="top_details">Read More...</p>
+        </div>
+    </div>
+    <div class="content">
+        <div class="content_head">
+            <p class="content_head_1"></p>
+            <p class="content_head_text"></p>
+        </div>
+    
+        <div class="content_item">
+            <img src="img/item1.svg" alt="" class="content_item_img">
+            <h3 class="content_heading">Keyword Research</h3>
+            <p class="content_item_text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+            <button class="content_item_btn">Learn More &#8250</button>
+        </div>
+        <div class="content_item">
+            <img src="img/item2.svg" alt="" class="content_item_img">
+            <h3 class="content_heading">Seo Optimazadion</h3>
+            <p class="content_item_text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+            <button class="content_item_btn">Learn More &#8250</button>
+        </div>
+        <div class="content_item">
+            <img src="img/item3.svg" alt="" class="content_item_img">
+            <h3 class="content_heading">Social Marketing</h3>
+            <p class="content_item_text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+            <button class="content_item_btn">Learn More &#8250</button>
+        </div>
+    </div>    
 </body>
 </html>
