--- a/Base_HTML_CSS/lesson9/onlesson/index.html
+++ b/Base_HTML_CSS/lesson9/onlesson/index.html
@@ -23,8 +23,8 @@
             <h3 class="heading">Value for Results in Global Agency Awards</h3>
             <p class="item_text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
         </div>
-        <div class="item">
-            <img width="306" src="img/item4.svg" alt="" class="item__img item_big">
+        <div class="item item_big">
+            <img width="306" src="img/item4.svg" alt="" class="item__img">
             <h3 class="heading">In print, and publishing industries for previewing layouts and visual mockups.</h3>
             <p class="item_text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups. Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups. Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
         </div>
