--- a/Base_HTML_CSS/lesson9/HW/index.html
+++ b/Base_HTML_CSS/lesson9/HW/index.html
@@ -29,27 +29,29 @@
     </div>
     <div class="content">
         <div class="content_head">
-            <p class="content_head_1"></p>
-            <p class="content_head_text"></p>
+            <p class="content_head_1">Why You Should Choose Us.</p>
+            <p class="content_head_text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business
+                applications through revolutionary catalysts.</p>
         </div>
-    
-        <div class="content_item">
-            <img src="img/item1.svg" alt="" class="content_item_img">
-            <h3 class="content_heading">Keyword Research</h3>
-            <p class="content_item_text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
-            <button class="content_item_btn">Learn More &#8250</button>
-        </div>
-        <div class="content_item">
-            <img src="img/item2.svg" alt="" class="content_item_img">
-            <h3 class="content_heading">Seo Optimazadion</h3>
-            <p class="content_item_text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
-            <button class="content_item_btn">Learn More &#8250</button>
-        </div>
-        <div class="content_item">
-            <img src="img/item3.svg" alt="" class="content_item_img">
-            <h3 class="content_heading">Social Marketing</h3>
-            <p class="content_item_text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
-            <button class="content_item_btn">Learn More &#8250</button>
+        <div class="content_main">
+            <div class="content_item">
+                <img src="img/item1.svg" alt="" class="content_item_img">
+                <h3 class="content_heading">Keyword Research</h3>
+                <p class="content_item_text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button class="content_item_btn">Learn More &#8250</button>
+            </div>
+            <div class="content_item">
+                <img src="img/item2.svg" alt="" class="content_item_img">
+                <h3 class="content_heading">Seo Optimazadion</h3>
+                <p class="content_item_text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button class="content_item_btn">Learn More &#8250</button>
+            </div>
+            <div class="content_item">
+                <img src="img/item3.svg" alt="" class="content_item_img">
+                <h3 class="content_heading">Social Marketing</h3>
+                <p class="content_item_text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button class="content_item_btn">Learn More &#8250</button>
+            </div>
         </div>
     </div>    
 </body>
