--- a/Base_HTML_CSS/lesson9/HW/index.html
+++ b/Base_HTML_CSS/lesson9/HW/index.html
@@ -14,7 +14,7 @@
             <p class="top_item_txt">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
             <p class="top_details">Read More...</p>
         </div>
-        <div class="top_item">
+        <div class="top_item top_item_shadow">
             <img src="img/top_img2.svg" alt="" class="top_item_img">
             <h3 class="top_heading">Get Quality Ieads</h3>
             <p class="top_item_txt">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
@@ -30,8 +30,7 @@
     <div class="content">
         <div class="content_head">
             <p class="content_head_1">Why You Should Choose Us.</p>
-            <p class="content_head_text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business
-                applications through revolutionary catalysts.</p>
+            <p class="content_head_text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts.</p>
         </div>
         <div class="content_main">
             <div class="content_item">
@@ -40,7 +39,7 @@
                 <p class="content_item_text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
                 <button class="content_item_btn">Learn More &#8250</button>
             </div>
-            <div class="content_item">
+            <div class="content_item content_item_shadow">
                 <img src="img/item2.svg" alt="" class="content_item_img">
                 <h3 class="content_heading">Seo Optimazadion</h3>
                 <p class="content_item_text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
