обновил задание урока 11

--- a/Base_HTML_CSS/lesson11/HW/index.html
+++ b/Base_HTML_CSS/lesson11/HW/index.html
@@ -18,13 +18,13 @@
         </div>
     </div>
     <div class="content">
-        <div class="cont__prev">
-            <div class="cont__prev__item"><img src="img/1-for_women.svg" alt="foto 1" /></div>
-            <div class="cont__prev__item"><img src="img/2-for men.svg" alt="foto 2" /></div>
-            <div class="cont__prev__item"><img src="img/3-for kids.svg" alt="foto 3" /></div>
-            <div class="cont__prev__item"><img src="img/4-ACCESORIES.svg" alt="foto 4" /></div>
+        <div class="cprev">
+            <div class="cprev__item"><img src="img/1-for_women.svg" alt="foto 1" /></div>
+            <div class="cprev__item"><img src="img/2-for men.svg" alt="foto 2" /></div>
+            <div class="cprev__item"><img src="img/3-for kids.svg" alt="foto 3" /></div>
+            <div class="cprev__item"><img src="img/4-ACCESORIES.svg" alt="foto 4" /></div>
         </div>
-        <div class="cont__main">
+        <div class="cmain">
             <div class="cmain_item">
                 <img src="img/main_1.jpg" alt="" class="cmain_img">
                 <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
