обновил задание урока 11

--- a/Base_HTML_CSS/lesson11/HW/index.html
+++ b/Base_HTML_CSS/lesson11/HW/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
 </head>
 <body>
     <div class="header">
@@ -24,42 +30,58 @@
             <div class="cprev__item"><img src="img/3-for kids.svg" alt="foto 3" /></div>
             <div class="cprev__item"><img src="img/4-ACCESORIES.svg" alt="foto 4" /></div>
         </div>
+        <div class="ctitle">
+            <p class="ctitle_big">Fetured Items</p>
+            <p class="ctitle_small">Shop for items based on what we featured in this week</p>
+        </div>
         <div class="cmain">
             <div class="cmain_item">
                 <img src="img/main_1.jpg" alt="" class="cmain_img">
-                <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
-                <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                <p class="cmain_price">$52.00</p>
+                <div class="cmain_desc">
+                    <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
+                    <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="cmain_price">$52.00</p>
+                </div>
             </div>
             <div class="cmain_item">
                 <img src="img/main_2.jpg" alt="" class="cmain_img">
-                <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
-                <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                <p class="cmain_price">$52.00</p>
+                <div class="cmain_desc">
+                    <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
+                    <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="cmain_price">$52.00</p>
+                </div>
             </div>
             <div class="cmain_item">
                 <img src="img/main_3.jpg" alt="" class="cmain_img">
-                <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
-                <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                <p class="cmain_price">$52.00</p>
+                <div class="cmain_desc">
+                    <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
+                    <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="cmain_price">$52.00</p>
+                </div>
             </div>
             <div class="cmain_item">
                 <img src="img/main_4.jpg" alt="" class="cmain_img">
-                <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
-                <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                <p class="cmain_price">$52.00</p>
+                <div class="cmain_desc">
+                    <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
+                    <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="cmain_price">$52.00</p>
+                </div>
             </div>
             <div class="cmain_item">
                 <img src="img/main_5.jpg" alt="" class="cmain_img">
-                <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
-                <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                <p class="cmain_price">$52.00</p>
+                <div class="cmain_desc">
+                    <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
+                    <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="cmain_price">$52.00</p>
+                </div>
             </div>
             <div class="cmain_item">
                 <img src="img/main_6.jpg" alt="" class="cmain_img">
-                <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
-                <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                <p class="cmain_price">$52.00</p>
+                <div class="cmain_desc">
+                    <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
+                    <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="cmain_price">$52.00</p>
+                </div>
             </div>
         </div>
     </div>
