--- a/Base_HTML_CSS/lesson11/HW/index.html
+++ b/Base_HTML_CSS/lesson11/HW/index.html
@@ -13,80 +13,82 @@
   
 </head>
 <body>
-    <div class="header">
-        <div class="hmenu">
-            <div class="hmenu__item"><img src="img/h_logo.svg" alt="header icon 1" class="hmenu__img"></div>
-            <div class="hmenu__item"><img src="img/h_buttons.svg" alt="header icon 3" class="hmenu__img"></div>
-        </div>
-        <div class="hmain">
-            <div class="hmain__item"><img src="img/h_foto1.svg" alt="foto 1" class="hmain_img"></div>
-            <div class="hmain__item"><img src="img/h_big_logo.svg" alt="logo" class="hmain_img"></div>
-        </div>
-    </div>
-    <div class="content">
-        <div class="cprev">
-            <div class="cprev__item"><img src="img/1-for_women.svg" alt="foto 1" /></div>
-            <div class="cprev__item"><img src="img/2-for men.svg" alt="foto 2" /></div>
-            <div class="cprev__item"><img src="img/3-for kids.svg" alt="foto 3" /></div>
-            <div class="cprev__item"><img src="img/4-ACCESORIES.svg" alt="foto 4" /></div>
-        </div>
-        <div class="ctitle">
-            <p class="ctitle_big">Fetured Items</p>
-            <p class="ctitle_small">Shop for items based on what we featured in this week</p>
-        </div>
-        <div class="cmain">
-            <div class="cmain_item">
-                <img src="img/main_1.jpg" alt="" class="cmain_img">
-                <div class="cmain_desc">
-                    <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
-                    <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="cmain_price">$52.00</p>
-                </div>
+    <div class="container">
+        <div class="header">
+            <div class="hmenu">
+                <div class="hmenu__item"><img src="img/h_logo.svg" alt="header icon 1" class="hmenu__img"></div>
+                <div class="hmenu__item"><img src="img/h_buttons.svg" alt="header icon 3" class="hmenu__img"></div>
             </div>
-            <div class="cmain_item">
-                <img src="img/main_2.jpg" alt="" class="cmain_img">
-                <div class="cmain_desc">
-                    <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
-                    <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="cmain_price">$52.00</p>
-                </div>
-            </div>
-            <div class="cmain_item">
-                <img src="img/main_3.jpg" alt="" class="cmain_img">
-                <div class="cmain_desc">
-                    <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
-                    <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="cmain_price">$52.00</p>
-                </div>
-            </div>
-            <div class="cmain_item">
-                <img src="img/main_4.jpg" alt="" class="cmain_img">
-                <div class="cmain_desc">
-                    <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
-                    <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="cmain_price">$52.00</p>
-                </div>
-            </div>
-            <div class="cmain_item">
-                <img src="img/main_5.jpg" alt="" class="cmain_img">
-                <div class="cmain_desc">
-                    <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
-                    <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="cmain_price">$52.00</p>
-                </div>
-            </div>
-            <div class="cmain_item">
-                <img src="img/main_6.jpg" alt="" class="cmain_img">
-                <div class="cmain_desc">
-                    <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
-                    <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="cmain_price">$52.00</p>
-                </div>
+            <div class="hmain">
+                <div class="hmain__item"><img src="img/h_foto1.svg" alt="foto 1" class="hmain_img"></div>
+                <div class="hmain__item"><img src="img/h_big_logo.svg" alt="logo" class="hmain_img"></div>
             </div>
         </div>
-    </div>
-    <div class="footer">
-        <button class="footer__btn">Browse All Product</button>
+        <div class="content">
+            <div class="cprev">
+                <div class="cprev__item"><img src="img/1-for_women.svg" alt="foto 1" /></div>
+                <div class="cprev__item"><img src="img/2-for men.svg" alt="foto 2" /></div>
+                <div class="cprev__item"><img src="img/3-for kids.svg" alt="foto 3" /></div>
+                <div class="cprev__item"><img src="img/4-ACCESORIES.svg" alt="foto 4" /></div>
+            </div>
+            <div class="ctitle">
+                <p class="ctitle_big">Fetured Items</p>
+                <p class="ctitle_small">Shop for items based on what we featured in this week</p>
+            </div>
+            <div class="cmain">
+                <div class="cmain_item">
+                    <img src="img/main_1.jpg" alt="" class="cmain_img">
+                    <div class="cmain_desc">
+                        <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
+                        <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                        <p class="cmain_price">$52.00</p>
+                    </div>
+                </div>
+                <div class="cmain_item">
+                    <img src="img/main_2.jpg" alt="" class="cmain_img">
+                    <div class="cmain_desc">
+                        <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
+                        <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                        <p class="cmain_price">$52.00</p>
+                    </div>
+                </div>
+                <div class="cmain_item">
+                    <img src="img/main_3.jpg" alt="" class="cmain_img">
+                    <div class="cmain_desc">
+                        <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
+                        <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                        <p class="cmain_price">$52.00</p>
+                    </div>
+                </div>
+                <div class="cmain_item">
+                    <img src="img/main_4.jpg" alt="" class="cmain_img">
+                    <div class="cmain_desc">
+                        <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
+                        <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                        <p class="cmain_price">$52.00</p>
+                    </div>
+                </div>
+                <div class="cmain_item">
+                    <img src="img/main_5.jpg" alt="" class="cmain_img">
+                    <div class="cmain_desc">
+                        <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
+                        <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                        <p class="cmain_price">$52.00</p>
+                    </div>
+                </div>
+                <div class="cmain_item">
+                    <img src="img/main_6.jpg" alt="" class="cmain_img">
+                    <div class="cmain_desc">
+                        <h3 class="cmain_title">ELLERY X M'O CAPSULE</h3>
+                        <p class="cmain_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                        <p class="cmain_price">$52.00</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <button class="footer__btn">Browse All Product</button>
+        </div>
     </div>
 </body>
 </html>
