--- a/Base_HTML_CSS/lesson11/HW/index.html
+++ b/Base_HTML_CSS/lesson11/HW/index.html
@@ -17,7 +17,11 @@
         <div class="header">
             <div class="hmenu">
                 <div class="hmenu__item"><img src="img/h_logo.svg" alt="header icon 1" class="hmenu__img"></div>
-                <div class="hmenu__item"><img src="img/h_buttons.svg" alt="header icon 3" class="hmenu__img"></div>
+                <div class="hmenu__item hmenu__btns_group">
+                    <img src="img/hbutton1.png" alt="header menu icon 1 " class="hmenu__img">
+                    <img src="img/hbutton2.png" alt="header menu icon 1 " class="hmenu__img">
+                    <img src="img/hbutton3.png" alt="header menu icon 1 " class="hmenu__img">
+                </div>
             </div>
             <div class="hmain">
                 <div class="hmain__item"><img src="img/h_foto1.svg" alt="foto 1" class="hmain_img"></div>
@@ -26,10 +30,20 @@
         </div>
         <div class="content">
             <div class="cprev">
-                <div class="cprev__item"><img src="img/1-for_women.svg" alt="foto 1" /></div>
-                <div class="cprev__item"><img src="img/2-for men.svg" alt="foto 2" /></div>
-                <div class="cprev__item"><img src="img/3-for kids.svg" alt="foto 3" /></div>
-                <div class="cprev__item"><img src="img/4-ACCESORIES.svg" alt="foto 4" /></div>
+                <div class="cprev__item">
+                    
+
+                    <img src="img/1-for_women.svg" alt="foto 1" class="cprev__img" />
+                </div>
+                <div class="cprev__item">
+                    <img src="img/2-for men.svg" alt="foto 2" />
+                </div>
+                <div class="cprev__item">
+                    <img src="img/3-for kids.svg" alt="foto 3" />
+                </div>
+                <div class="cprev__item">
+                    <img src="img/4-ACCESORIES.svg" alt="foto 4" />
+                </div>
             </div>
             <div class="ctitle">
                 <p class="ctitle_big">Fetured Items</p>
