--- a/Base_HTML_CSS/lesson12/HW/index.html
+++ b/Base_HTML_CSS/lesson12/HW/index.html
@@ -15,45 +15,58 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="hmenu">
-                <div class="hmenu__item"><img src="img/h_logo.svg" alt="header icon 1" class="hmenu__img"></div>
-                <div class="hmenu__item hmenu__btns_group">
-                    <img src="img/hbutton1.png" alt="header menu icon 1 " class="hmenu__img">
-                    <img src="img/hbutton2.png" alt="header menu icon 1 " class="hmenu__img">
-                    <img src="img/hbutton3.png" alt="header menu icon 1 " class="hmenu__img">
+            <div class="hmenu container">
+                <div class="hmenu_btns">
+                    <div class="hmenu__item"><img src="img/h_logo.svg" alt="header icon 1" class="hmenu__img"></div>
+                    <div class="hmenu__item hmenu__btns_group">
+                        <img src="img/hbutton1.png" alt="header menu icon 1 " class="hmenu__img">
+                        <img src="img/hbutton2.png" alt="header menu icon 2 " class="hmenu__img">
+                        <img src="img/hbutton3.png" alt="header menu icon 3 " class="hmenu__img">
+                    </div>
                 </div>
             </div>
             <div class="hmain">
-                <div class="hmain__item"><img src="img/h_foto1.svg" alt="foto 1" class="hmain_img"></div>
+                <div class="hmain__item">
+                    <img src="img/h_foto1.svg" alt="foto 1" class="hmain_img">
+                </div>
                 <div class="hmain__item">
                     <div class="banner-titlewrapper"> 
+                        <div class="banner_rectangle"></div>
                         <div class="bannertitle">
                             <h1 class="bannertitle1">THE BRAND</h1>
-                            <h2 class="bannertitle2">OF LUXERIOUS
-                                <span><div class="bannertitle3">FASHION</div></span>
+                            <h2 class="bannertitle2">OF LUXERIOUS 
+                                <span class="bannertitle2_2">FASHION</span>
                             </h2>
                         </div>
                     </div>
-
-                    <img src="img/h_big_logo.svg" alt="logo" class="hmain_img">
                 </div>
             </div>
         </div>
         <div class="content">
             <div class="cprev">
-                <div class="cprev__item">
-                    
-
-                    <img src="img/1-for_women.svg" alt="foto 1" class="cprev__img" />
+                <div class="cprev__item1">
+                    <div class="cprev__bg">
+                        <p class="cprev__text">30% OFF</p>
+                        <h3 class="cprev__title">FOR WOMEN</h3>
+                    </div>
                 </div>
-                <div class="cprev__item">
-                    <img src="img/2-for men.svg" alt="foto 2" />
+                <div class="cprev__item2">
+                    <div class="cprev__bg">
+                        <p class="cprev__text">HOT DEAL</p>
+                        <h3 class="cprev__title">FOR MEN</h3>
+                    </div>
                 </div>
-                <div class="cprev__item">
-                    <img src="img/3-for kids.svg" alt="foto 3" />
+                <div class="cprev__item3">
+                    <div class="cprev__bg">
+                        <p class="cprev__text">NEW ARRIVALS</p>
+                        <h3 class="cprev__title">FOR KIDS</h3>
+                    </div>
                 </div>
-                <div class="cprev__item">
-                    <img src="img/4-ACCESORIES.svg" alt="foto 4" />
+                <div class="cprev__item4">
+                    <div class="cprev__bg">
+                        <p class="cprev__text">LUXIROUS &amp; TRENDY</p>
+                        <h3 class="cprev__title">ACCESORIES</h3>
+                    </div>
                 </div>
             </div>
             <div class="ctitle">
