--- a/Base_HTML_CSS/lesson12/HW/index.html
+++ b/Base_HTML_CSS/lesson12/HW/index.html
@@ -17,11 +17,14 @@
         <div class="header">
             <div class="hmenu container">
                 <div class="hmenu_btns">
-                    <div class="hmenu__item"><img src="img/h_logo.svg" alt="header icon 1" class="hmenu__img"></div>
-                    <div class="hmenu__item hmenu__btns_group">
-                        <img src="img/hbutton1.png" alt="header menu icon 1 " class="hmenu__img">
-                        <img src="img/hbutton2.png" alt="header menu icon 2 " class="hmenu__img">
-                        <img src="img/hbutton3.png" alt="header menu icon 3 " class="hmenu__img">
+                    <div class="hmenu_left_part">
+                        <img src="img/h_small_logo.svg" alt="header icon 1" class="hmenu__img">
+                        <img src="img/h_search.svg" alt="header icon 1" class="hmenu__img">
+                    </div>
+                    <div class="hmenu__btns_group">
+                        <img src="img/hmenu_r1.png" alt="right icon 1" class="hmenu_img">
+                        <img src="img/hmenu_r2.png" alt="right icon 2" class="hmenu_img">
+                        <img src="img/hmenu_r3.png" alt="right icon 3" class="hmenu_img">
                     </div>
                 </div>
             </div>
