обновил ДЗ урока 12

--- a/Base_HTML_CSS/lesson14/HW/index.html
+++ b/Base_HTML_CSS/lesson14/HW/index.html
@@ -22,9 +22,9 @@
                         <img src="img/h_search.svg" alt="header icon 1" class="hmenu__img">
                     </div>
                     <div class="hmenu__btns_group">
-                        <img src="img/hmenu_r1.png" alt="right icon 1" class="hmenu_img">
-                        <img src="img/hmenu_r2.png" alt="right icon 2" class="hmenu_img">
-                        <img src="img/hmenu_r3.png" alt="right icon 3" class="hmenu_img">
+                        <img src="img/hmenu_r1.png" alt="right icon 1" class="hmenu_img hmenu_img1">
+                        <img src="img/hmenu_r2.png" alt="right icon 2" class="hmenu_img hmenu_img2">
+                        <img src="img/hmenu_r3.png" alt="right icon 3" class="hmenu_img hmenu_img3">
                     </div>
                 </div>
             </div>
@@ -36,10 +36,10 @@
                     <div class="banner-titlewrapper"> 
                         <div class="banner_rectangle"></div>
                         <div class="bannertitle">
-                            <h1 class="bannertitle1">THE BRAND</h1>
-                            <h2 class="bannertitle2">OF LUXERIOUS 
+                            <span class="bannertitle1">THE BRAND</span>
+                            <p class="bannertitle2">OF LUXERIOUS 
                                 <span class="bannertitle2_2">FASHION</span>
-                            </h2>
+                            </p>
                         </div>
                     </div>
                 </div>
