--- a/Base_HTML_CSS/lesson16/HW/index.html
+++ b/Base_HTML_CSS/lesson16/HW/index.html
@@ -149,19 +149,23 @@
                 </div>
             </section>
             <section class="footer_main">
-                <div class="footer_main_item1">
-                    <img src="img/f_foto1.png" alt="foto 1" class="footer_main_item1_img">
-                    <p class="footer_main_item1_text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span class="footer_main_item1_text2">a pulvinar purus condimentum“</span></p>
-                </div>
-                <div class="footer_main_item2">
-                    <h2 class="footer_main_item2_title">SUBSCRIBE</h2>
-                    <p class="footer_main_item2_text">FOR OUR NEWLETTER AND PROMOTION</p>
-                    <form action="#" class="footer_main_item2_form">
-                        <input type="email" name="emain" id="form_email" class="footer_main_item2_input" required placeholder="Enter Your Email">
-                        <button class="footer_main_item2_btn" type="submit">
-                            Subscribe
-                        </button>
-                    </form>
+                <div class="footer_main_bg">
+                    <div class="footer_main_content">
+                        <div class="footer_main_item1">
+                            <img src="img/f_foto1.png" alt="foto 1" class="footer_main_item1_img">
+                            <p class="footer_main_item1_text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span class="footer_main_item1_text2">a pulvinar purus condimentum“</span></p>
+                        </div>
+                        <div class="footer_main_item2">
+                            <h2 class="footer_main_item2_title">SUBSCRIBE</h2>
+                            <p class="footer_main_item2_text">FOR OUR NEWLETTER AND PROMOTION</p>
+                            <form action="#" class="footer_main_item2_form">
+                                <input type="email" name="emain" id="form_email" class="footer_main_item2_input" required placeholder="Enter Your Email">
+                                <button class="footer_main_item2_btn" type="submit">
+                                    Subscribe
+                                </button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </section>
             <div class="footer_end">
