--- a/Base_HTML_CSS/lesson16/HW/index.html
+++ b/Base_HTML_CSS/lesson16/HW/index.html
@@ -18,13 +18,13 @@
             <div class="hmenu container">
                 <div class="hmenu_btns">
                     <div class="hmenu_left_part">
-                        <img src="img/h_small_logo.svg" alt="header icon 1" class="hmenu__img">
+                        <img src="img/h_small_logo.svg" alt="header icon 1" class="hmenu__img__logo">
                         <img src="img/h_search.svg" alt="header icon 1" class="hmenu__img">
                     </div>
                     <div class="hmenu__btns_group">
-                        <img src="img/hmenu_r1.png" alt="right icon 1" class="hmenu_img hmenu_img1">
-                        <img src="img/hmenu_r2.png" alt="right icon 2" class="hmenu_img hmenu_img2">
-                        <img src="img/hmenu_r3.png" alt="right icon 3" class="hmenu_img hmenu_img3">
+                        <img src="img/hmenu_r1.png" alt="right icon 1" class="hmenu__img hmenu_img1">
+                        <img src="img/hmenu_r2.png" alt="right icon 2" class="hmenu__img hmenu_img2">
+                        <img src="img/hmenu_r3.png" alt="right icon 3" class="hmenu__img hmenu_img3">
                     </div>
                 </div>
             </div>
@@ -185,7 +185,6 @@
                         <div class="footer_end_link footer_end_link4">
                             <img src="img/f_twitter.svg" alt="footer link 4" class="footer_end_img">
                         </div>
-
                     </div>
                 </section>
             </div>
